--- a/style.css
+++ b/style.css
@@ -166,5 +166,40 @@ margin-bottom: 1em;
 #spendButton:hover {
   background-color: #e68900;
 }
+@media (max-width: 480px) {
+  body {
+    font-size: 1.4em;
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  .task-box {
+    font-size: 1.3em;
+    padding: 20px;
+    width: 95%;
+  }
+
+  .points-tally {
+    font-size: 1.6em;
+  }
+
+  #resetButton,
+  #spendButton {
+    font-size: 1.3em;
+    padding: 12px 24px;
+  }
+
+  #spendInput {
+    font-size: 1.2em;
+    width: 60px;
+  }
+
+  .back-btn {
+    font-size: 1.2em;
+  }
+}
 
 
