--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   padding: 20px;
-  background: #f0f8ff;
+  background: #0ad37f;
 }
 
 h1 {
